--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <!--    <script>alert('Hello, Guys')</script> -->
     <script src="sandbox.js"></script>
+    <script src="sandbox_Template12.js"></script>
     
 </body>
 </html>
