Feat JS DataType Null Indefined Boolean

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <!--    <script>alert('Hello, Guys')</script> -->
     <script src="sandbox.js"></script>
-    <script src="sandbox_Template12-13.js"></script>
-    
+    <script src="sandbox_Template12-13-14.js"></script>
+    <script src="sandbox_Template15.js"></script>
+
 </body>
 </html>
