Feat JS DataType Comparasion Conversion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <!--    <script>alert('Hello, Guys')</script> -->
     <script src="sandbox.js"></script>
     <script src="sandbox_Template12-13-14.js"></script>
-    <script src="sandbox_Template15.js"></script>
+    <script src="sandbox_Template15-16.js"></script>
+    <script src="sandbox_Template17.js"></script>
 
 </body>
 </html>
